# playerlink-community-chain

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/authentication/: Cargo.toml
pallets/authentication/src/: lib.rs  weights.rs
pallets/serve/: Cargo.toml
pallets/serve/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
