[package]
name = "playerlink-node"
version = "0.0.1"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["PlayerLink io <https://github.com/playerlinkio>"]
homepage = "https://playerlink.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/playerlinkio/playerlink-community-chain/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "playerlink-node"

[dependencies]
futures = "0.3.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.64"
#structopt = "0.3.8"
structopt = "0.3.25"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
hex-literal = "0.3.1"
async-trait = "0.1"
log = "0.4.8"

sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sc-consensus = { git = "https://github.com/paritytech/substrate" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate" }
sc-network = { git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-timestamp = { git = "https://github.com/paritytech/substrate" }

# These dependencies are used for the node template's RPCs
sc-rpc = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate" }
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate" }

playerlink-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["aura"]
aura = ["playerlink-runtime/aura"]
manual-seal = ["playerlink-runtime/manual-seal"]
runtime-benchmarks = [
	"playerlink-runtime/runtime-benchmarks",
]
