[package]
name = "playerlink-primitives"
version = "0.0.1"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["PlayerLink io <https://github.com/playerlinkio>"]
homepage = "https://playerlink.io/"
edition = "2021"
license = "GPL-3.0"
publish = false
repository = "https://github.com/playerlinkio/playerlink-community-chain/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

serde = { version = "1.0.132", optional = true }

frame-system = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false}
sp-application-crypto = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
