[package]
name = "playerlink-runtime"
version = "0.0.1"
description = "A fresh FRAME-based Substrate runtime, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://playerlink.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/playerlinkio/playerlink-community-chain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
hex-literal = { version = "0.3.4", optional = true }



# important !!
primitives = { package = "playerlink-primitives", path = "../primitives", default-features = false }


pallet-template = { path = "../pallets/template",default-features = false}
#playerlink-serve = { path = "../pallets/serve",default-features = false}





[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-template/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
