[package]
name = "pallet-serve"
version = "0.0.1"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["PlayerLink io <https://github.com/playerlinkio>"]
homepage = "https://playerlink.io/"
edition = "2021"
license = "GPL-3.0"
publish = false
repository = "https://github.com/playerlinkio/playerlink-community-chain/"


[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
# important !!
primitives = { package = "playerlink-primitives", path = "../../primitives", default-features = false }


sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false}
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
log = { version = "0.4.14", default-features = false }


[features]
default = ["std"]
std = [
	"sp-io/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
