[package]
name = "pallet-serve"
version = "0.0.1"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["PlayerLink io <https://github.com/playerlinkio>"]
homepage = "https://playerlink.io/"
edition = "2021"
license = "GPL-3.0"
publish = false
repository = "https://github.com/playerlinkio/playerlink-community-chain/"


[dependencies]
hex = { version = "0.4", default-features = false}
base58 = { version = "0.2.0"}
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false, optional = true }
# important !!
primitives = { package = "playerlink-primitives", path = "../../primitives", default-features = false }


sp-core = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11",default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false }

sp-application-crypto = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11", default-features = false}
#pallet-balances = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.11",default-features = false}

[dev-dependencies]
log = { version = "0.4.14", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }


[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
	"hex/std",
	"sp-io/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
try-runtime = ["frame-support/try-runtime"]
